fixed alignment of text on info page

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -75,6 +75,17 @@ h1{
   border-radius: 30px;
   color: #f2f2f2;
 }
+li {
+  list-style-type: disc;
+  list-style-postion: inside;
+  margin: auto;
+  margin-left: 20px;
+}
+
+#infoModal .modal-content {
+  text-align: left;
+  
+}
 
 /* The Close Button */
 .close {
